# investment-analysis

./: .gitignore  CLAUDE.md  Makefile  README.md  _index.md  compass_artifact_wf-47ac71e9-b4f8-47a7-b860-6c6ee4962aa8_text_markdown.md  reports_state.json
investment-api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
investment-api/alembic/: env.py
investment-api/alembic/versions/: 85d1cad0af6c_initial.py  a1b2c3d4e5f6_add_tinkoff_integration.py  b2c3d4e5f6g7_news_signals_bigint_id.py  c3d4e5f6g7h8_drop_news_and_trade_signals.py  d4e5f6g7h8i9_add_trigger_tags_to_catalysts.py  e5f6g7h8i9j0_add_analysis_text_fields.py
investment-api/app/: admin.py  config.py  db.py  main.py
investment-api/app/api/: analytics.py  catalysts.py  companies.py  deps.py  dividends.py  intraday.py  jobs.py  news.py  orderbook.py  prices.py  reports.py  sectors.py  signals.py  snapshots.py
investment-api/app/jobs/: fetch_events.py  fetch_ir_calendar.py  fetch_moex.py  fetch_prices.py  fetch_smartlab.py  fetch_snapshots.py  fetch_tinkoff.py  scheduler.py
investment-api/app/models/: __init__.py  catalyst.py  company.py  dividend.py  enums.py  financial_report.py  (+8 more)
investment-api/tests/: conftest.py  test_api_analytics.py  test_api_catalysts.py  test_api_companies.py  test_api_dividends.py  test_api_news.py  test_api_prices.py  test_api_reports.py  test_api_sectors.py  test_api_signals.py  test_jobs_events.py  test_jobs_moex.py  test_jobs_smartlab.py  test_migrations.py  test_models.py  test_scheduler.py  test_schemas.py  test_smoke.py
(+757 files in other folders)
